			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard
28-Apr-2005
~~~~~~~~~~~
If we can't find getopt_long, try looking in libgnugetopt (Stephen Watson).

26-Apr-2005
~~~~~~~~~~~
Bugfix: Broke get_xdg_data_dirs while writing choices_list_xdg_dirs (Stephen 
        Watson, reported by Pär Forsling).
Bugfix: Don't try to move directories that aren't there, but make symbolic
        links for them anyway (Stephen Watson, reported by Thomas Leonard).
Old choices_find_path_load/save now static, use new XDG functions exclusively
(Stephen Watson).

25-Apr-2005
~~~~~~~~~~~
Change over from CHOICESPATH to XDG_CONFIG_HOME and XDG_CONFIG_DIRS (Stephen
Watson).

21-Apr-2005
~~~~~~~~~~~
Try to cope with BadWindow errors (Thomas Leonard; suggested by Kacper Wysock).

17-Apr-2005
~~~~~~~~~~~
Bugfix: Replacing an existing display settings would erase all the other
        existing settings (Stephen Watson, reported by Henrik Jacobsson).

16-Apr-2005
~~~~~~~~~~~
Bugfix: Expired thumbnails were not being purged from the memory cache
        because of a reference counting issue (Stephen Watson).

14-Apr-2005
~~~~~~~~~~~
Updated Danish translation (Christian Storgaard).

28-Mar-2005
~~~~~~~~~~~
Simplify code to set minibuffer text to red on error (Dennis). Also set
background to white, in case a theme's colour clashes with red (Thomas
Leonard).

23-Mar-2005
~~~~~~~~~~~
Option in list view to show the full MIME-Type comment rather than
just "File" (Stephen Watson).

12-Mar-2005
~~~~~~~~~~~
When building the SendTo menu, allow nested subdirectories more than one
level deep (Jonatan Liljedahl).
Add 'Customise Menu...' to New submenu (Thomas Leonard, suggested by Jesse
Wagner).
Can specify panel item arguments and short cut when adding via SOAP
call (m0n5t3r). 
Also for pinboard items (and fixed bugs related to pinboard_add_with_args)
(Stephen Watson).

28-Feb-2005
~~~~~~~~~~~
Bugfix: Progress bar for count operation didn't finish when the count did